
syntax = "proto3";

package Course;

service CourseService{
 rpc GetCourseData (CourseDataRequest) returns (CourseDataResponse);
 rpc GetCourseModuleData (CourseModuleDataRequest) returns (CourseModuleDataResponse);
}

message CourseDataRequest {
    string course_id = 1;
}

message CourseDataResponse {
    CourseDetails courseData = 1;
}

message CourseDetails{
    string id = 1;
    string title = 2;
    string description = 3;
    string thumbnail_url = 4;
    string createdAt = 5;
    string updatedAt = 6;    
}

message CourseModuleDataRequest {
    string module_id = 1;
}

message CourseModuleDataResponse {
    string id = 1;
    string title = 2;
    string description = 3;
    int32 completion_percentage = 4;
    string course_id = 5;
}